# gamedepot

./: Cargo.toml  steamapi.txt
crates/gamedepot/: Cargo.toml
crates/gamedepot-cli/: Cargo.toml
crates/gamedepot-cli/src/: main.rs  session.rs
crates/gamedepot/src/: depot.rs  gog.rs  lib.rs  manifest.rs  steam.rs
crates/gogapi/: Cargo.toml
crates/gogapi/src/: api.rs  auth.rs  lib.rs  types.rs
crates/gogapi/src/api/: config.rs  content_system.rs  friends.rs  gameplay.rs  mod.rs  presence.rs  products.rs  users.rs
crates/gogdl/: Cargo.toml
crates/gogdl/src/: api.rs  auth.rs  error.rs  lib.rs  types.rs
crates/steamapi/: Cargo.toml
crates/steamapi/src/: api.rs  error.rs  lib.rs  types.rs
crates/steamapi/src/api/: mod.rs  player_service.rs  steam_news.rs  steam_user.rs  steam_user_stats.rs
crates/steamcmd/: Cargo.toml
crates/steamcmd/src/: cmd.rs  error.rs  install.rs  lib.rs  parse.rs  runner.rs
