[package]
name = "gamedepot-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for downloading Steam and GOG games"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
gamedepot = { path = "../gamedepot" }
indicatif = "0.18.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"
