[package]
name = "gamedepot"
version = "0.1.0"
edition = "2024"
description = "A library for downloading Steam and GOG games"

[dependencies]
gogapi = { version = "0.1.0", path = "../gogapi" }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
steamapi = { version = "0.1.0", path = "../steamapi" }
steamcmd = { path = "../steamcmd" }
thiserror = "2"
