[package]
name = "gamedepot"
version = "0.1.0"
edition = "2024"
description = "A library for downloading Steam and GOG games"

[dependencies]
gogapi = { version = "0.1.0", path = "../gogapi" }
md5_hash = { version = "0.10.6", package = "md-5", features = ["asm"] }
memmap2 = "0.9.10"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
steamapi = { version = "0.1.0", path = "../steamapi" }
steamcmd = { path = "../steamcmd" }
thiserror = "2"
toml = "1.0.6"
