[package]
name = "gogapi"
version = "0.1.0"
edition = "2024"
description = "GOG game downloader using the GOG REST API"

[dependencies]
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
urlencoding = "2.1.3"
